<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tests_done_title_fragment">Tests realizados</string>
    <string name="aviso_crear_alguna_opcion">Tienes que crear alguna una opcion</string>
    <string name="aviso_seleccionar_alguna_opcion">Tienes que seleccionar alguna una opcion</string>
    <string name="aviso_enunciado_correcto">Tienes que crear un enunciado adecuado</string>
    <string name="my_tests_title_fragment">Mis tests</string>
    <string name="sample_tests_done">Tests realizados por ti</string>
    <string name="login_user_email">Introduce un email</string>
    <string name="login_user_password">Introduce una contraseña (min 6 caracteres)</string>
    <string name="test_description">Descripción</string>
    <string name="test_name">Test de prueba</string>
    <string name="rellenar_huecos_enunciado">Enunciado de la pregunta</string>
    <string name="hint_respuesta_enuciado_rellenar_huecos">Ejemplo: los animales ... son sensibles. Los puntos suspensivos representan huecos para rellenar</string>
    <string name="txt_btn_add_respuesta_rellenar_huecos">Añadir respuestas</string>
    <string name="guardar_respuestas_rellenar_huecos">Guardar respuestas</string>
    <string name="aviso_rellenar_todos_los_huecos">Algunos huecos no están rellenos</string>
    <string name="enunciado_no_vacio">El enunciado no puede estar vacío</string>
    <string name="respuesta_rellenar_huecos">Escribe la respuesta </string>
    <string name="texto_no_vacio">El texto no puede estar vacío</string>
    <string name="seleccionar_opcion">Tienes que seleccionar una opción</string>
    <string name="email_no_vacio">El email no puede estár vacio</string>
    <string name="pass_min_6">La contraseña tiene que tener minimo 6 caracteres</string>
    <string name="auth_correct">Autenticacion correcta</string>
    <string name="auth_fail">Autenticacion fallida</string>
    <string name="usuario_creado_exito">Usuario creado con éxito</string>
    <string name="usuario_info_fail">No se ha podido guardar información sobre el usuario:</string>
    <string name="creacion_fail">Creación fallida:</string>
    <string name="test_minimo_3_preguntas">Un test debe tener minimo 3 preguntas</string>
    <string name="test_minimo_1_categoria">Un test debe tener minimo una categoría</string>
    <string name="test_minimo_1_titulo">Un test debe tener un título</string>
    <string name="test_minimo_1_descripcion">Un test debe tener una descripción</string>
    <string name="test_creado_exito">Se ha creado el test correctamente</string>
    <string name="test_creado_fallo">Ha habido un error al crear el test: </string>
    <string name="test_asignado_fallo">Ha habido un error al asignar el test: </string>
    <string name="enunciado_pregunta">Enunciado de la pregunta</string>
    <string name="buscar_por_categoria">Buscar por categoría, ej: cultura</string>
    <string name="tests_title_fragment">Tests</string>
    <string name="button_anadir">Añadir</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_crear">Crear</string>
    <string name="hint_opcion">Opción</string>
    <string name="hint_categoria">Categoria</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="registrar">Registrar</string>
    <string name="tipo_seleccion">Selección</string>
    <string name="tipo_multiple">Múltiple Respuesta</string>
    <string name="tipo_rellenar">Rellenar Huecos</string>
    <string name="pregunta_guardada">Pregunta añadida</string>
    <string name="titulo_test">Título del test</string>
    <string name="aviso_portapapeles">Código copiado en el portapapeles</string>
    <string name="has_acertado">Has acertado</string>
    <string name="has_fallado">has fallado</string>
    <string name="correcto">¡Correcto!</string>
    <string name="deberia_ser">debería ser</string>
    <string name="guardar">Guardar</string>
    <string name="progreso">Progreso</string>
    <string name="preguntas">preguntas</string>
    <string name="aciertos">aciertos</string>
    <string name="fallos">fallos</string>
    <string name="siguiente_pregunta">Siguiente</string>
    <string name="finalizar_test">Finalizar</string>
    <string name="test_valorado_exito">Test valorado con éxito</string>
    <string name="categoria_test">Categoría:</string>
    <string name="descripcion_test">Descripción:</string>
    <string name="titulo_test_info">Título:</string>
    <string name="realizar_test">Realizar test</string>
    <string name="valorar">Valora el test</string>
    <string name="num_preguntas">Número de preguntas:</string>
    <string name="comprobar_pregunta">Comprobar respuesta</string>
    <string name="preguntas_acertadas">preguntas acertadas</string>
    <string name="preguntas_falladas">preguntas falladas</string>
</resources>