<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CrearPreguntaRellenarHuecos">

    <TextView
        android:id="@+id/rellenar_huecos_enunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rellenar_huecos_enunciado"
        app:layout_constraintBottom_toTopOf="@+id/respuesta_enunciado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806" />

    <EditText
        android:id="@+id/respuesta_enunciado"
        android:layout_width="318dp"
        android:layout_height="82dp"
        android:layout_marginBottom="440dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_respuesta_enuciado_rellenar_huecos"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_add_respuestas_rellenar_huecos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_btn_add_respuesta_rellenar_huecos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuesta_enunciado" />

    <LinearLayout
        android:id="@+id/respuestas_rellenar_huecos"
        android:layout_width="409dp"
        android:layout_height="342dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_respuestas_rellenar_huecos"
        app:layout_constraintVertical_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>